--- a/.github/workflows/pr-discord.yml
+++ b/.github/workflows/pr-discord.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Send to Discord
         uses: actions/github-script@v7
         env:
-          WEBHOOK_URL: "https://discord.com/api/webhooks/1439144660122734655/FJVXtvHvvdfPYA5EzjlwUzxRIe1das_-3-YSlEoy0IcN20Z4Em7T-6UbCxX96ifzW0Oe/github"
+          WEBHOOK_URL: "https://discord.com/api/webhooks/1439144660122734655/FJVXtvHvvdfPYA5EzjlwUzxRIe1das_-3-YSlEoy0IcN20Z4Em7T-6UbCxX96ifzW0Oe"
         with:
           script: |
             const webhook = process.env.WEBHOOK_URL;
@@ -50,16 +50,15 @@ jobs:
                 color: color,
                 fields: [
                   {name: `Base`,
-                  value: pr.base.ref,
-                  url: pr.base.repo.url,
+                  value: `[${pr.base.ref}](${pr.base.repo.html_url})`,
                   inline : true
                   },
                   {name: `<---`,
+                  value:' ',
                   inline : true
                   },
                   {name: `Compare`,
-                  value: pr.head.ref,
-                  url: pr.head.repo.url,
+                  value: `[${pr.head.ref}](${pr.head.repo.html_url}),
                   inline : true
                   }
                 ],
